LK-10: Fix action-progress bar spacing

--- a/ckanext/ckanext-apicatalog_ui/less/forms.less
+++ b/ckanext/ckanext-apicatalog_ui/less/forms.less
@@ -475,7 +475,7 @@ textarea {
   .clearfix;
   color: @stagesTextColor;
   counter-reset: stage;
-  margin: -@gutterY -@gutterX @gutterY;
+  margin: -@gutterY -(@gutterX + 15px) @gutterY -(@gutterX + 40px);
   overflow: hidden;
 }
 
